MakefileParser.py
# Generated from Makefile.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MakefileParser ( Parser ):

    grammarFileName = "Makefile.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\r'", "'\\n'", "':'", "'='", "'ifeq'", 
                     "'endif'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "IFEQ", "ENDIF", "WS", "NL" ]

    RULE_makefile = 0
    RULE_identity = 1
    RULE_conditional = 2
    RULE_rule = 3
    RULE_assign = 4
    RULE_statement = 5

    ruleNames =  [ "makefile", "identity", "conditional", "rule", "assign", 
                   "statement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    IFEQ=5
    ENDIF=6
    WS=7
    NL=8

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MakefileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MakefileParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MakefileParser.StatementContext)
            else:
                return self.getTypedRuleContext(MakefileParser.StatementContext,i)


        def getRuleIndex(self):
            return MakefileParser.RULE_makefile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMakefile" ):
                listener.enterMakefile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMakefile" ):
                listener.exitMakefile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMakefile" ):
                return visitor.visitMakefile(self)
            else:
                return visitor.visitChildren(self)




    def makefile(self):

        localctx = MakefileParser.MakefileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_makefile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 12
                self.statement()
                self.state = 15 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 480) != 0)):
                    break

            self.state = 17
            self.match(MakefileParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MakefileParser.RULE_identity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentity" ):
                listener.enterIdentity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentity" ):
                listener.exitIdentity(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentity" ):
                return visitor.visitIdentity(self)
            else:
                return visitor.visitChildren(self)




    def identity(self):

        localctx = MakefileParser.IdentityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_identity)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 19
                _la = self._input.LA(1)
                if _la <= 0 or (((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 22 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 480) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IFEQ(self):
            return self.getToken(MakefileParser.IFEQ, 0)

        def WS(self):
            return self.getToken(MakefileParser.WS, 0)

        def identity(self):
            return self.getTypedRuleContext(MakefileParser.IdentityContext,0)


        def getRuleIndex(self):
            return MakefileParser.RULE_conditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional" ):
                listener.enterConditional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional" ):
                listener.exitConditional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditional" ):
                return visitor.visitConditional(self)
            else:
                return visitor.visitChildren(self)




    def conditional(self):

        localctx = MakefileParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_conditional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(MakefileParser.IFEQ)
            self.state = 25
            self.match(MakefileParser.WS)
            self.state = 26
            self.identity()
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 27
                self.match(MakefileParser.T__0)


            self.state = 30
            self.match(MakefileParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identity(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MakefileParser.IdentityContext)
            else:
                return self.getTypedRuleContext(MakefileParser.IdentityContext,i)


        def getRuleIndex(self):
            return MakefileParser.RULE_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule" ):
                listener.enterRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule" ):
                listener.exitRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule" ):
                return visitor.visitRule(self)
            else:
                return visitor.visitChildren(self)




    def rule_(self):

        localctx = MakefileParser.RuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.identity()
            self.state = 33
            self.match(MakefileParser.T__2)
            self.state = 34
            self.identity()
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 35
                self.match(MakefileParser.T__0)


            self.state = 38
            self.match(MakefileParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identity(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MakefileParser.IdentityContext)
            else:
                return self.getTypedRuleContext(MakefileParser.IdentityContext,i)


        def getRuleIndex(self):
            return MakefileParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = MakefileParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.identity()
            self.state = 41
            self.match(MakefileParser.T__3)
            self.state = 42
            self.identity()
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 43
                self.match(MakefileParser.T__0)


            self.state = 46
            self.match(MakefileParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditional(self):
            return self.getTypedRuleContext(MakefileParser.ConditionalContext,0)


        def rule_(self):
            return self.getTypedRuleContext(MakefileParser.RuleContext,0)


        def assign(self):
            return self.getTypedRuleContext(MakefileParser.AssignContext,0)


        def ENDIF(self):
            return self.getToken(MakefileParser.ENDIF, 0)

        def getRuleIndex(self):
            return MakefileParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MakefileParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.conditional()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.rule_()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.assign()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.match(MakefileParser.ENDIF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





